# msgbuf

./: .gitignore  README.md  requirements.txt  setup.py
msg/: Header.yaml  msg.yaml
msgbuf/: main.py  msgbuf.py  rctw.py
templates/: hpp.template
test/: A.hpp  CMakeLists.txt  byteswap.hpp  iarchive.hpp  oarchive.hpp  test.cc
